# C-DecisionTree

./: CMakeLists.txt
include/: helper.h  node.h  tree.h
src/: tree.cpp
